# lpm_discretize

./: README.md  pyproject.toml
src/lpm_discretize/: __init__.py  discretize.py
tests/: test_discretize.py
